--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@aws-sdk/client-secrets-manager": "^3.34.0",
     "@ethersproject/wallet": "^5.4.0",
     "@snapshot-labs/snapshot.js": "^0.2.9",
+    "commander": "^8.2.0",
     "graphql": "^15.6.0",
     "graphql-request": "^3.5.0"
   }
