--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "graphql-request": "^3.5.0"
   },
   "scripts": {
-    "start": "node src/index.js",
+    "print": "node src/index.js",
     "vote": "node src/index.js --vote"
   }
 }
